--- a/.github/workflows/linux-ci.yml
+++ b/.github/workflows/linux-ci.yml
@@ -24,7 +24,22 @@ jobs:
       - name: configuration
         run: |
           make defconfig
-      
       - name: build
         run: |
           make -j$(nproc) || make -j1 V=1
+      - name: Prepare artifact
+        run: |
+          mkdir -p ./artifact/
+          cp -rf $(find ./arch -type f -name bzImage) ./artifact/
+      - name: Deliver buildinfo
+        uses: actions/upload-artifact@v2
+        with:
+          name: buildinfo
+          path: ./artifact/
+      - name: Upload release asset
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.YOURTOKEN }}
+          file: ./artifact/*
+          tag: ${{ github.ref }}
+          file_glob: true
