--- a/.github/workflows/linux-ci.yml
+++ b/.github/workflows/linux-ci.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - name: echo
         run: |
-          echo ${{ secrets.YOURTOKEN }}
+          echo ${{ secrets.GITHUB_TOKEN }}
